src/objects/CustomObject6__c.object
<CustomObject>
    <fields>
        <fullName>gcsdabh__c</fullName>
        <label>工程师档案编号</label>
        <referenceTo>gcsdagl__c</referenceTo>
        <relationshipLabel>绩效考核管理</relationshipLabel>
        <relationshipName>jxkhgl</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>khfs__c</fullName>
        <label>考核分数</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>khny__c</fullName>
        <label>考核年月</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>绩效考核管理</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>绩效考核档案序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>绩效考核管理</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>